--- a/algobowl/templates/master.xhtml
+++ b/algobowl/templates/master.xhtml
@@ -58,7 +58,13 @@
             <a class="nav-link" href="${tg.url('/')}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="${tg.url('/competition')}">Competitions</a>
+            <a class="nav-link" href="${tg.url('/group')}">My Group</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="${tg.url('/competition')}">Rankings</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="${tg.url('/competition/archive')}">Archive</a>
           </li>
         </ul>
         <div py:if="not request.identity">
