Add ToS and privacy

--- a/algobowl/templates/master.xhtml
+++ b/algobowl/templates/master.xhtml
@@ -127,8 +127,11 @@
           <a href="https://en.wikipedia.org/wiki/MIT_License" target="_blank">
             MIT License</a>.
         </p>
-        <i class="fas fa-heart fa-lg"></i>
-        <i class="fab fa-python fa-lg"></i>
+      </div>
+      <div class="text-center small">
+        <a href="${tg.url('/tos')}">Terms of Service</a>
+        &middot;
+        <a href="${tg.url('/privacy')}">Privacy Policy</a>
       </div>
     </div>
   </footer>
