problem format: make repr_score static so we can use it in the rankings

--- a/algobowl/templates/competition/rankings.xhtml
+++ b/algobowl/templates/competition/rankings.xhtml
@@ -30,7 +30,7 @@ def tooltip_attrs(iput, ent):
         return {'data-toggle': 'tooltip', 'title': 'Rejected'}
 
     if st.score is not None:
-        return {'data-toggle': 'tooltip', 'title': '{:.0f}'.format(st.score)}
+        return {'data-toggle': 'tooltip', 'title': st.score}
 
     return {}
     ?>
