ov: Use repr_score on ov page

--- a/algobowl/templates/competition/ov.xhtml
+++ b/algobowl/templates/competition/ov.xhtml
@@ -28,7 +28,7 @@
         </tr>
         <tr>
           <th>Score</th>
-          <td>${'{:.0f}'.format(output.score)}</td>
+          <td>${score}</td>
         </tr>
         <tr>
           <th>Status</th>
