--- a/algobowl/templates/group/input_upload.xhtml
+++ b/algobowl/templates/group/input_upload.xhtml
@@ -11,7 +11,7 @@
       <input type="file" class="form-control-file" id="input-upload" name="input_upload" />
       <small class="form-text text-muted" py:if="group.input is not None">
         An input has already been uploaded. You may wish to
-        <a href="${group.input.data.url}">download your current input</a>.
+        <a href="${group.input.url}">download your current input</a>.
       </small>
     </div>
     <div class="form-group">
