--- a/algobowl/templates/competition/ov.xhtml
+++ b/algobowl/templates/competition/ov.xhtml
@@ -13,16 +13,16 @@
         <tr py:if="show_input_downloads">
           <th>Input File</th>
           <td>
-            <a href="${output.input.data.url}">
-              ${output.input.data.filename}
+            <a href="${output.input.url}">
+              ${output.input.filename}
             </a>
           </td>
         </tr>
         <tr>
           <th>Output File</th>
           <td>
-            <a href="${output.data.url}">
-              ${output.data.filename}
+            <a href="${output.url}">
+              ${output.filename}
             </a>
           </td>
         </tr>
