--- a/algobowl/templates/group/verification.xhtml
+++ b/algobowl/templates/group/verification.xhtml
@@ -12,7 +12,7 @@
       specification on the validity of outputs.
     </p>
     <p>
-      For reference, <a href="${group.input.data.url}">here</a>
+      For reference, <a href="${group.input.url}">here</a>
       is the input that your group uploaded and you should verify against.
     </p>
     <a class="btn btn-primary"
@@ -36,8 +36,8 @@
       <tbody>
         <tr py:for="output in group.input.outputs">
           <td>
-            <a href="${output.data.url}">
-              <tt py:content="output.data.filename" />
+            <a href="${output.url}">
+              <tt py:content="output.filename" />
             </a>
           </td>
           <td id="verification-column-${output.id}">
