--- a/algobowl/templates/group/input_upload.xhtml
+++ b/algobowl/templates/group/input_upload.xhtml
@@ -5,7 +5,9 @@
     <strong>${h.ftime(competition.input_upload_ends)}</strong> to submit
     your input and decide upon a team name.
   </p>
-  <form method="POST" action="${tg.request.url}/input_upload" enctype="multipart/form-data">
+  <form method="POST"
+        action="${tg.url(f'/group/{group.id}/input_upload')}"
+        enctype="multipart/form-data">
     <div class="form-group">
       <label for="input-upload">Input Upload</label>
       <input type="file" class="form-control-file" id="input-upload" name="input_upload" />
