Initial add of benchmark grading

--- a/algobowl/templates/competition/grade.xhtml
+++ b/algobowl/templates/competition/grade.xhtml
@@ -46,7 +46,7 @@
               </td>
               <td>
                 ${format_percent(gt.contributions.ranking)}
-                (${gt.place})
+                (Fleet ${gt.fleet})
               </td>
               <td>
                 ${grade}
