Add grading/deadline info to landing

--- a/algobowl/templates/edu_landing.xhtml
+++ b/algobowl/templates/edu_landing.xhtml
@@ -114,4 +114,63 @@
       </div>
     </div>
   </div>
+  <h2 class="mt-4 mb-3"><i class="fas fa-clipboard-list fa-fw"></i> Grading</h2>
+  <p>
+    Grades are assigned according to the following percentages:
+  </p>
+
+  <table class="table">
+    <tbody>
+      <tr>
+        <th scope="row">Input Uploaded</th>
+        <td>7%</td>
+      </tr>
+      <tr>
+        <th scope="row">Input Difficulty</th>
+        <td>3%</td>
+      </tr>
+      <tr>
+        <th scope="row">Valid Outputs</th>
+        <td>70%</td>
+      </tr>
+      <tr>
+        <th scope="row">Verification Accuracy</th>
+        <td>5%</td>
+      </tr>
+      <tr>
+        <th scope="row">Rankings</th>
+        <td>
+          15%, assigned by rank within benchmark:
+          <ul>
+            <li>Below benchmark 1: Between 0% and 5%</li>
+            <li>Below benchmark 2: Between 5% and 10%</li>
+            <li>Above benchmark 2: Between 10% and 15%</li>
+          </ul>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <p>
+    This rubric is designed in such a way that approximately 80% of the grade
+    can be received without a competitive solution.
+  </p>
+
+  <p>
+    Your individualized grade is a scaled version of your group grade
+    based on evaluation responses from others in your group.
+  </p>
+  <h2 class="mt-4 mb-3"><i class="fas fa-stopwatch fa-fw"></i> Deadlines</h2>
+  <p>
+    All deadlines for each stage of the competition are strict.  Since this is a
+    whole-class project, we need input upload to be complete before output
+    upload may begin, we need output upload to be complete before verification
+    can begin, etc.  Students are encouraged to upload early to avoid missing
+    deadlines.  The site will not allow you to participate in a competition
+    stage after it ends.
+  </p>
+  <p>
+    If you miss a deadline due to an approved absence, you should contact your
+    instructor to provide an alternative activity for that portion of the grade.
+  </p>
 </div>
