--- a/algobowl/templates/master.xhtml
+++ b/algobowl/templates/master.xhtml
@@ -84,6 +84,10 @@
                 <i class="fas fa-users fa-fw"></i>
                 My Group
               </a>
+              <a class="dropdown-item" href="${tg.url('/pref/cli')}">
+                <i class="fas fa-terminal fa-fw"></i>
+                Command Line Interface
+              </a>
               <a class="dropdown-item" py:if="request.identity['user'].admin"
                  href="${tg.url('/admin')}">
                 <i class="fas fa-user-secret fa-fw"></i>
