--- a/algobowl/templates/master.xhtml
+++ b/algobowl/templates/master.xhtml
@@ -123,16 +123,14 @@
     <div class="container footer-vertical-centering">
       <div class="text-center">
         <p>
-          AlgoBOWL is
+          The AlgoBOWL web app is open source!  File issues and contribute on
           <a href="https://github.com/jackrosenthal/algobowl" target="_blank">
-            open source software</a> designed by
-          <a href="http://jack.rosenth.al" target="_blank">
-            Jack Rosenthal</a> and released under an
-          <a href="https://en.wikipedia.org/wiki/MIT_License" target="_blank">
-            MIT License</a>.
+            the GitHub repo</a>.
         </p>
       </div>
       <div class="text-center small">
+        <a href="https://github.com/jackrosenthal/algobowl/blob/main/docs/rules.md" target="_blank">Full Rules and Grading Info</a>
+        &middot;
         <a href="${tg.url('/tos')}">Terms of Service</a>
         &middot;
         <a href="${tg.url('/privacy')}">Privacy Policy</a>
