Show dates in browser local timezone
Fixes #4

--- a/algobowl/templates/competition/archive.xhtml
+++ b/algobowl/templates/competition/archive.xhtml
@@ -13,7 +13,7 @@
               <h4>
                 ${c.name}
               </h4>
-              <span>Ended ${h.ftime(c.end)}</span>
+              <span>Ended ${literal(h.ftime(c.end))}</span>
             </a>
           </py:for>
         </div>
