--- a/algobowl/templates/competition/list.xhtml
+++ b/algobowl/templates/competition/list.xhtml
@@ -13,7 +13,7 @@
               <h4>
                 ${c.name}
               </h4>
-              <span>${h.ftime(c.input_upload_begins, c.end)}</span>
+              <span>${literal(h.ftime(c.input_upload_begins, c.end))}</span>
             </a>
           </py:for>
         </div>
