--- a/algobowl/templates/group/output_upload.xhtml
+++ b/algobowl/templates/group/output_upload.xhtml
@@ -2,7 +2,7 @@
   <h1>Output Upload</h1>
   <p class="lead">
     Download the inputs from the other teams and run them on your program.
-    You have until <strong>${h.ftime(competition.output_upload_ends)}</strong>
+    You have until <strong>${literal(h.ftime(competition.output_upload_ends))}</strong>
     to submit your outputs.
   </p>
   <a class="btn btn-primary"
