Move assets from wheel to S3
This moves static assets from inside the Python wheel/source
distribution to S3, proxied by Cloudflare as a CDN.

--- a/algobowl/templates/group/evaluation.xhtml
+++ b/algobowl/templates/group/evaluation.xhtml
@@ -47,5 +47,5 @@ pb_color = cycle(
       Submit Evaluations
     </button>
   </form>
-  <script type="text/javascript" src="${tg.url('/assets/js/evaluation.js')}"></script>
+  <script type="text/javascript" src="${h.url('/assets/js/evaluation.js')}"></script>
 </div>
