--- a/algobowl/templates/group/resolution.xhtml
+++ b/algobowl/templates/group/resolution.xhtml
@@ -156,5 +156,5 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="${tg.url('/assets/js/resolution.js')}"></script>
+  <script type="text/javascript" src="${h.url('/assets/js/resolution.js')}"></script>
 </div>
