--- a/algobowl/templates/master.xhtml
+++ b/algobowl/templates/master.xhtml
@@ -8,29 +8,29 @@
     ${tg.config['site.branding.name']}: <py:block name="title">Competition</py:block>
   </title>
 
-  <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/assets/css/bootstrap.min.css')}" />
-  <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/assets/fontawesome/css/all.min.css')}" />
-  <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/assets/css/style.css')}" />
+  <link rel="stylesheet" type="text/css" media="screen" href="${h.url('/assets/css/bootstrap.min.css')}" />
+  <link rel="stylesheet" type="text/css" media="screen" href="${h.url('/assets/fontawesome/css/all.min.css')}" />
+  <link rel="stylesheet" type="text/css" media="screen" href="${h.url('/assets/css/style.css')}" />
 
   <!-- Favicons -->
-  <link rel="apple-touch-icon-precomposed" sizes="57x57"    href="${tg.url('/assets/img/apple-touch-icon-57x57.png')}" />
-  <link rel="apple-touch-icon-precomposed" sizes="114x114"  href="${tg.url('/assets/img/apple-touch-icon-114x114.png')}" />
-  <link rel="apple-touch-icon-precomposed" sizes="72x72"    href="${tg.url('/assets/img/apple-touch-icon-72x72.png')}" />
-  <link rel="apple-touch-icon-precomposed" sizes="144x144"  href="${tg.url('/assets/img/apple-touch-icon-144x144.png')}" />
-  <link rel="apple-touch-icon-precomposed" sizes="120x120"  href="${tg.url('/assets/img/apple-touch-icon-120x120.png')}" />
-  <link rel="apple-touch-icon-precomposed" sizes="152x152"  href="${tg.url('/assets/img/apple-touch-icon-152x152.png')}" />
-  <link rel="icon" type="image/png" href="${tg.url('/assets/img/favicon-32x32.png')}" sizes="32x32" />
-  <link rel="icon" type="image/png" href="${tg.url('/assets/img/favicon-16x16.png')}" sizes="16x16" />
+  <link rel="apple-touch-icon-precomposed" sizes="57x57"    href="${h.url('/assets/img/apple-touch-icon-57x57.png')}" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114"  href="${h.url('/assets/img/apple-touch-icon-114x114.png')}" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72"    href="${h.url('/assets/img/apple-touch-icon-72x72.png')}" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144"  href="${h.url('/assets/img/apple-touch-icon-144x144.png')}" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120"  href="${h.url('/assets/img/apple-touch-icon-120x120.png')}" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152"  href="${h.url('/assets/img/apple-touch-icon-152x152.png')}" />
+  <link rel="icon" type="image/png" href="${h.url('/assets/img/favicon-32x32.png')}" sizes="32x32" />
+  <link rel="icon" type="image/png" href="${h.url('/assets/img/favicon-16x16.png')}" sizes="16x16" />
   <meta name="application-name" content="${tg.config['site.branding.name']}" />
   <meta name="msapplication-TileColor" content="#FFFFFF" />
-  <meta name="msapplication-TileImage" content="${tg.url('/assets/img/mstile-144x144.png')}" />
-  <link rel="shortcut icon" href="${tg.url('/assets/img/favicon.ico')}" />
+  <meta name="msapplication-TileImage" content="${h.url('/assets/img/mstile-144x144.png')}" />
+  <link rel="shortcut icon" href="${h.url('/assets/img/favicon.ico')}" />
   <!-- End Favicons -->
 
-  <script src="${tg.url('/assets/js/jquery-3.3.1.min.js')}"></script>
-  <script src="${tg.url('/assets/js/popper.min.js')}"></script>
-  <script src="${tg.url('/assets/js/bootstrap.min.js')}"></script>
-  <script src="${tg.url('/assets/js/algobowl.js')}"></script>
+  <script src="${h.url('/assets/js/jquery-3.3.1.min.js')}"></script>
+  <script src="${h.url('/assets/js/popper.min.js')}"></script>
+  <script src="${h.url('/assets/js/bootstrap.min.js')}"></script>
+  <script src="${h.url('/assets/js/algobowl.js')}"></script>
 
   <py:block name="head"></py:block>
 </head>
