templates: Fix output_upload.js URL

--- a/algobowl/templates/group/output_upload.xhtml
+++ b/algobowl/templates/group/output_upload.xhtml
@@ -57,5 +57,5 @@
       </py:for>
     </tbody>
   </table>
-  <script type="text/javascript" src="${tg.url('/assets/js/output_upload.js')}"></script>
+  <script type="text/javascript" src="${h.url('/assets/js/output_upload.js')}"></script>
 </div>
