--- a/algobowl/templates/master.xhtml
+++ b/algobowl/templates/master.xhtml
@@ -28,6 +28,7 @@
   <!-- End Favicons -->
 
   <script src="${h.url('/assets/js/jquery-3.3.1.min.js')}"></script>
+  <script src="${h.url('/assets/js/zip.min.js')}"></script>
   <script src="${h.url('/assets/js/popper.min.js')}"></script>
   <script src="${h.url('/assets/js/bootstrap.min.js')}"></script>
   <script src="${h.url('/assets/js/algobowl.js')}"></script>
