templates: verification: Fix JS url

--- a/algobowl/templates/group/verification.xhtml
+++ b/algobowl/templates/group/verification.xhtml
@@ -73,7 +73,7 @@
         </tr>
       </tbody>
     </table>
-    <script type="text/javascript" src="${tg.url('/assets/js/verification.js')}"></script>
+    <script type="text/javascript" src="${h.url('/assets/js/verification.js')}"></script>
   </py:if><py:else>
     <div class="alert alert-danger">
       Your group did not upload an input by the deadline, and will be unable
